--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon app.js"
   },
   "author": "Viacheslav Orel",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "got": "^11.8.1",
+    "jest": "^26.6.3",
+    "playwright": "^1.7.1"
   }
 }
