--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "path": "^0.12.7"
