--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "Viacheslav Orel",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "hbs": "^4.1.1",
+    "mongodb": "^3.6.3",
     "nodemon": "^2.0.6",
+    "password-hash": "^1.2.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
